yaml/gateway/istio/micro-services/nginx_and_httpbin_https/httproute2.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: default
spec:
  parentRefs:
    - name: gateway
      namespace: istio-gateway
      sectionName: nginx-https-listener
  hostnames: 
    - api.nginx.par.sandboxcloud.xyz
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx
      port: 8000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route
  namespace: default
spec:
  parentRefs:
    - name: gateway
      namespace: istio-gateway
      sectionName: httpbin-https-listener
  hostnames: 
    - api.httpbin.par.sandboxcloud.xyz
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: httpbin
      port: 8001
